--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu portal de notícias</title>
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
     <header>
@@ -21,7 +21,7 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section id="esportes">
         <h2>Esportes</h2>
         <article>
             <img src="./imagens/futebol.jpg" alt="Bola de futebol no gramado" />
@@ -68,7 +68,7 @@
             <a href="#" title="Leia a notícia completa">Ler mais</a>
         </article>
     </section>
-    <section>
+    <section id="economia">
         <h2>Economia</h2>
         <article>
             <img src="./imagens/dolares.jpg" alt="Muitos dólares" />
