--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Exercicio - M7</title>
-</head>
-<body>
-    <h1>Validador de números</h1>
-
-    <form action="" id="formulario">
-        <label for="numero-1">Número 1</label>
-        <input type="number" id="numero-1" placeholder="Digite o primeiro número">
-
-        <label for="numero-2">Número 2</label>
-        <input type="number" id="numero-2" placeholder="Digite o segundo número">
-
-        <button type="submit">Verificar</button>
-    </form>
-    <p id="mensagem-validacao">
-        
-    </p>
-
-    <script src="./index.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./style.css">
+        <title>Exercicio - M9</title>
+    </head>
+    <body>
+        <h1>Minha Lista de Tarefas</h1>
+        <form action="" id="formulario">
+            <input type="text" id="tarefa" placeholder="Digite a sua tarefa">
+            <button type="submit" class="btn-teste" id="i">Cadastrar</button>
+        </form>
+        <ul id="lista-tarefas">
+            
+        </ul>
+        <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+        <script src="./index.js"></script>
+        <script src="https://kit.fontawesome.com/aadab78836.js" crossorigin="anonymous"></script>
+    </body>
 </html>
