Alteração no arquivo html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             
         </ul>
         <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-        <script src="./index.js"></script>
+        <script src="./main.js"></script>
         <script src="https://kit.fontawesome.com/aadab78836.js" crossorigin="anonymous"></script>
     </body>
 </html>
