--- a/index.html
+++ b/index.html
@@ -4,19 +4,116 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./style.css">
-        <title>Exercicio - M9</title>
+        <title>Exercicio - M10</title>
     </head>
     <body>
-        <h1>Minha Lista de Tarefas</h1>
-        <form action="" id="formulario">
-            <input type="text" id="tarefa" placeholder="Digite a sua tarefa">
-            <button type="submit" class="btn-teste" id="i">Cadastrar</button>
+        <h1>Formulário de cadastro</h1>
+        <form action="" class="formStyle">
+            <div id="dadosPessoais">
+                <div class="formCampo">
+                    <label class="formLabel" for="nome">Nome Completo</label>
+                    <input
+                        type="text"
+                        maxlength="40"
+                        id="nome"
+                        name="nome"
+                        placeholder="Digite seu nome"
+                    >
+                </div>
+                <div class="formCampo">
+                    <label class="formLabel" for="email">E-mail</label>
+                    <input
+                        type="email"
+                        id="email"
+                        name="email"
+                        placeholder="Digite seu e-mail"
+                    >
+                </div>
+                <div class="formCampo">
+                    <label class="formLabel" for="telefone">Telefone</label>
+                    <input
+                        type="tel"
+                        id="telefone"
+                        name="telefone"
+                        placeholder="Digite seu telefone"
+                    >
+                </div>
+                <div class="formCampo">
+                    <label class="formLabel" for="cpf">CPF</label>
+                    <input
+                        type="text"
+                        id="cpf"
+                        name="cpf"
+                        placeholder="Digite seu CPF"
+                    >
+                </div>
+            </div>
+            <div id="endereco">
+                <div class="formCampo">
+                    <label class="formLabel" for="rua">Rua</label>
+                    <input
+                        type="text"
+                        id="rua"
+                        name="rua"
+                        placeholder="Digite o nome da sua rua"
+                    >
+                </div>
+                <div class="formCampo">
+                    <label class="formLabel" for="numero">Número</label>
+                    <input
+                        type="number"
+                        id="numero"
+                        name="numero"
+                        placeholder="Nº"
+                    >
+                </div>
+                <div class="formCampo">
+                    <label class="formLabel" for="bairro">Bairro</label>
+                    <input
+                        type="text"
+                        id="bairro"
+                        name="bairro"
+                        placeholder="Informe seu bairro"
+                    >
+                </div>
+                <div class="formCampo">
+                    <label class="formLabel" for="cidade">Cidade</label>
+                    <input
+                        type="text"
+                        id="cidade"
+                        name="cidade"
+                        placeholder="Informe sua cidade"
+                    >
+                </div>
+                <div class="formCampo">
+                    <label class="formLabel" for="estado">Estado</label>
+                    <input
+                        type="text"
+                        id="estado"
+                        name="estado"
+                        placeholder="Informe seu estado"
+                    >
+                </div>
+                <div class="formCampo">
+                    <label class="formLabel" for="complemento">Complemento</label>
+                    <input
+                        type="text"
+                        id="complemento"
+                        name="complemento"
+                        placeholder="Casa, Apto, Bloco"
+                    >
+                </div>
+            </div>
+            <div id="btns">
+                <button type="button" id="avancar">Avançar</button>
+                <button type="button" id="voltar">Voltar</button>
+                <button type="submit" id="enviar">Enviar</button>
+            </div>
         </form>
-        <ul id="lista-tarefas">
-            
-        </ul>
-        <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-        <script src="./main.js"></script>
-        <script src="https://kit.fontawesome.com/aadab78836.js" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+        <script src="./js/jquery.mask.min.js"></script>
+        <script src="./js/jquery.validate.min.js"></script>
+        <script src="./js/messages_pt_BR.min.js"></script>
+        <script src="./js/main.js"></script>
     </body>
 </html>
