--- a/index.html
+++ b/index.html
@@ -7,109 +7,117 @@
         <title>Exercicio - M10</title>
     </head>
     <body>
-        <h1>Formulário de cadastro</h1>
-        <form action="" class="formStyle">
-            <div id="dadosPessoais">
-                <div class="formCampo">
-                    <label class="formLabel" for="nome">Nome Completo</label>
-                    <input
-                        type="text"
-                        maxlength="40"
-                        id="nome"
-                        name="nome"
-                        placeholder="Digite seu nome"
-                    >
-                </div>
-                <div class="formCampo">
-                    <label class="formLabel" for="email">E-mail</label>
-                    <input
-                        type="email"
-                        id="email"
-                        name="email"
-                        placeholder="Digite seu e-mail"
-                    >
-                </div>
-                <div class="formCampo">
-                    <label class="formLabel" for="telefone">Telefone</label>
-                    <input
-                        type="tel"
-                        id="telefone"
-                        name="telefone"
-                        placeholder="Digite seu telefone"
-                    >
-                </div>
-                <div class="formCampo">
-                    <label class="formLabel" for="cpf">CPF</label>
-                    <input
-                        type="text"
-                        id="cpf"
-                        name="cpf"
-                        placeholder="Digite seu CPF"
-                    >
-                </div>
+        <div class="container">
+            <div class="form">
+                <form action="#">
+                    <h1>Formulário de cadastro</h1>
+                    <div id="dadosPessoais">
+                        <h3>Dados Pessoais</h3>
+                        <div class="input-group">
+                            <div class="input-box">
+                                <label for="nome">Nome Completo</label>
+                                <input
+                                    type="text"
+                                    maxlength="40"
+                                    id="nome"
+                                    name="nome"
+                                    placeholder="Digite seu nome"
+                                >
+                            </div>
+                            <div class="input-box">
+                                <label for="email">E-mail</label>
+                                <input
+                                    type="email"
+                                    id="email"
+                                    name="email"
+                                    placeholder="Digite seu e-mail"
+                                >
+                            </div>
+                            <div class="input-box">
+                                <label for="telefone">Telefone</label>
+                                <input
+                                    type="tel"
+                                    id="telefone"
+                                    name="telefone"
+                                    placeholder="Digite seu telefone"
+                                >
+                            </div>
+                            <div class="input-box">
+                                <label for="cpf">CPF</label>
+                                <input
+                                    type="text"
+                                    id="cpf"
+                                    name="cpf"
+                                    placeholder="Digite seu CPF"
+                                >
+                            </div>
+                        </div>
+                    </div>
+                    <div id="endereco">
+                        <h3>Endereço</h3>
+                        <div class="input-group">
+                            <div class="input-box">
+                                <label for="rua">Rua</label>
+                                <input
+                                    type="text"
+                                    id="rua"
+                                    name="rua"
+                                    placeholder="Digite o nome da sua rua"
+                                >
+                            </div>
+                            <div class="input-box">
+                                <label for="numero">Número</label>
+                                <input
+                                    type="number"
+                                    id="numero"
+                                    name="numero"
+                                    placeholder="Nº"
+                                >
+                            </div>
+                            <div class="input-box">
+                                <label for="bairro">Bairro</label>
+                                <input
+                                    type="text"
+                                    id="bairro"
+                                    name="bairro"
+                                    placeholder="Informe seu bairro"
+                                >
+                            </div>
+                            <div class="input-box">
+                                <label for="cidade">Cidade</label>
+                                <input
+                                    type="text"
+                                    id="cidade"
+                                    name="cidade"
+                                    placeholder="Informe sua cidade"
+                                >
+                            </div>
+                            <div class="input-box">
+                                <label for="estado">Estado</label>
+                                <input
+                                    type="text"
+                                    id="estado"
+                                    name="estado"
+                                    placeholder="Informe seu estado"
+                                >
+                            </div>
+                            <div class="input-box">
+                                <label for="cep">CEP</label>
+                                <input
+                                    type="text"
+                                    id="cep"
+                                    name="cep"
+                                    placeholder="Casa, Apto, Bloco"
+                                >
+                            </div>
+                        </div>
+                    </div>
+                    <div class="btn">
+                        <button type="submit" id="enviar">Cadastrar</button>
+                    </div>
+                </form>
             </div>
-            <div id="endereco">
-                <div class="formCampo">
-                    <label class="formLabel" for="rua">Rua</label>
-                    <input
-                        type="text"
-                        id="rua"
-                        name="rua"
-                        placeholder="Digite o nome da sua rua"
-                    >
-                </div>
-                <div class="formCampo">
-                    <label class="formLabel" for="numero">Número</label>
-                    <input
-                        type="number"
-                        id="numero"
-                        name="numero"
-                        placeholder="Nº"
-                    >
-                </div>
-                <div class="formCampo">
-                    <label class="formLabel" for="bairro">Bairro</label>
-                    <input
-                        type="text"
-                        id="bairro"
-                        name="bairro"
-                        placeholder="Informe seu bairro"
-                    >
-                </div>
-                <div class="formCampo">
-                    <label class="formLabel" for="cidade">Cidade</label>
-                    <input
-                        type="text"
-                        id="cidade"
-                        name="cidade"
-                        placeholder="Informe sua cidade"
-                    >
-                </div>
-                <div class="formCampo">
-                    <label class="formLabel" for="estado">Estado</label>
-                    <input
-                        type="text"
-                        id="estado"
-                        name="estado"
-                        placeholder="Informe seu estado"
-                    >
-                </div>
-                <div class="formCampo">
-                    <label class="formLabel" for="complemento">Complemento</label>
-                    <input
-                        type="text"
-                        id="complemento"
-                        name="complemento"
-                        placeholder="Casa, Apto, Bloco"
-                    >
-                </div>
-            </div>
-            <div id="btns">
-                <button type="button" id="avancar">Avançar</button>
-                <button type="button" id="voltar">Voltar</button>
-                <button type="submit" id="enviar">Enviar</button>
-            </div>
-        </form>
+        </div>
         <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
         <script src="./js/jquery.mask.min.js"></script>
         <script src="./js/jquery.validate.min.js"></script>
