--- a/index.html
+++ b/index.html
@@ -3,125 +3,52 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./style.css">
-        <title>Exercicio - M10</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
+
+        <style>
+            .container {
+                height: 100vh;
+            }
+
+            .row {
+              width: 100%;
+            }
+        </style>
+        <title>Exercício - M12</title>
     </head>
-    <body>
-        <div class="container">
-            <div class="form">
-                <form action="#">
-                    <h1>Formulário de cadastro</h1>
-                    <div id="dadosPessoais">
-                        <h3>Dados Pessoais</h3>
-                        <div class="input-group">
-                            <div class="input-box">
-                                <label for="nome">Nome Completo</label>
-                                <input
-                                    type="text"
-                                    maxlength="40"
-                                    id="nome"
-                                    name="nome"
-                                    placeholder="Digite seu nome"
-                                >
-                            </div>
-                            <div class="input-box">
-                                <label for="email">E-mail</label>
-                                <input
-                                    type="email"
-                                    id="email"
-                                    name="email"
-                                    placeholder="Digite seu e-mail"
-                                >
-                            </div>
-                            <div class="input-box">
-                                <label for="telefone">Telefone</label>
-                                <input
-                                    type="tel"
-                                    id="telefone"
-                                    name="telefone"
-                                    placeholder="Digite seu telefone"
-                                >
-                            </div>
-                            <div class="input-box">
-                                <label for="cpf">CPF</label>
-                                <input
-                                    type="text"
-                                    id="cpf"
-                                    name="cpf"
-                                    placeholder="Digite seu CPF"
-                                >
-                            </div>
-                        </div>
-                    </div>
-                    <div id="endereco">
-                        <h3>Endereço</h3>
-                        <div class="input-group">
-                            <div class="input-box">
-                                <label for="rua">Rua</label>
-                                <input
-                                    type="text"
-                                    id="rua"
-                                    name="rua"
-                                    placeholder="Digite o nome da sua rua"
-                                >
-                            </div>
-                            <div class="input-box">
-                                <label for="numero">Número</label>
-                                <input
-                                    type="number"
-                                    id="numero"
-                                    name="numero"
-                                    placeholder="Nº"
-                                >
-                            </div>
-                            <div class="input-box">
-                                <label for="bairro">Bairro</label>
-                                <input
-                                    type="text"
-                                    id="bairro"
-                                    name="bairro"
-                                    placeholder="Informe seu bairro"
-                                >
-                            </div>
-                            <div class="input-box">
-                                <label for="cidade">Cidade</label>
-                                <input
-                                    type="text"
-                                    id="cidade"
-                                    name="cidade"
-                                    placeholder="Informe sua cidade"
-                                >
-                            </div>
-                            <div class="input-box">
-                                <label for="estado">Estado</label>
-                                <input
-                                    type="text"
-                                    id="estado"
-                                    name="estado"
-                                    placeholder="Informe seu estado"
-                                >
-                            </div>
-                            <div class="input-box">
-                                <label for="cep">CEP</label>
-                                <input
-                                    type="text"
-                                    id="cep"
-                                    name="cep"
-                                    placeholder="Casa, Apto, Bloco"
-                                >
-                            </div>
-                        </div>
-                    </div>
-                    <div class="btn">
-                        <button type="submit" id="enviar">Cadastrar</button>
-                    </div>
-                </form>
+    <body class="bg-body-secondary">
+        <div class="container d-flex align-items-center">
+            <div class="row">
+                <div class="col-4 mx-auto mt-5 bg-success bg-opacity-10 p-5 rounded-3">
+
+                    <h1 class="text-center mb-5 text-uppercase fs-4">Formulário de Cadastro</h1>
+
+                    <form action="#">
+                        <label class="form-label fw-bold" for="nome">Nome</label>
+                        <input
+                            class="form-control mb-3"
+                            type="text"
+                            id="nome"
+                            placeholder="Informe seu nome"
+                        >
+                        <label class="form-label fw-bold" for="email">E-mail</label>
+                        <input
+                            class="form-control mb-3"
+                            type="email"
+                            id="email"
+                            placeholder="Informe seu e-mail"
+                        >
+                        <label class="form-label fw-bold" for="tel">Telefone</label>
+                        <input
+                            class="form-control mb-4"
+                            type="tel"
+                            id="tel"
+                            placeholder="Informe seu telefone"
+                        >
+                        <button class="btn btn-outline-success d-block mx-auto" type="submit">Cadastrar</button>
+                    </form>
+                </div>
             </div>
         </div>
-        <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-        <script src="./js/jquery.mask.min.js"></script>
-        <script src="./js/jquery.validate.min.js"></script>
-        <script src="./js/messages_pt_BR.min.js"></script>
-        <script src="./js/main.js"></script>
     </body>
 </html>
