--- a/index.html
+++ b/index.html
@@ -1,127 +1,79 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./style.css">
-        <title>Exercicio - M10</title>
-    </head>
-    <body>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./build/main.css">
+</head>
+<body>
+    <header>
         <div class="container">
-            <div class="form">
-                <form action="#">
-                    <h1>Formulário de cadastro</h1>
-                    <div id="dadosPessoais">
-                        <h3>Dados Pessoais</h3>
-                        <div class="input-group">
-                            <div class="input-box">
-                                <label for="nome">Nome Completo</label>
-                                <input
-                                    type="text"
-                                    maxlength="40"
-                                    id="nome"
-                                    name="nome"
-                                    placeholder="Digite seu nome"
-                                >
-                            </div>
-                            <div class="input-box">
-                                <label for="email">E-mail</label>
-                                <input
-                                    type="email"
-                                    id="email"
-                                    name="email"
-                                    placeholder="Digite seu e-mail"
-                                >
-                            </div>
-                            <div class="input-box">
-                                <label for="telefone">Telefone</label>
-                                <input
-                                    type="tel"
-                                    id="telefone"
-                                    name="telefone"
-                                    placeholder="Digite seu telefone"
-                                >
-                            </div>
-                            <div class="input-box">
-                                <label for="cpf">CPF</label>
-                                <input
-                                    type="text"
-                                    id="cpf"
-                                    name="cpf"
-                                    placeholder="Digite seu CPF"
-                                >
-                            </div>
-                        </div>
-                    </div>
-                    <div id="endereco">
-                        <h3>Endereço</h3>
-                        <div class="input-group">
-                            <div class="input-box">
-                                <label for="rua">Rua</label>
-                                <input
-                                    type="text"
-                                    id="rua"
-                                    name="rua"
-                                    placeholder="Digite o nome da sua rua"
-                                >
-                            </div>
-                            <div class="input-box">
-                                <label for="numero">Número</label>
-                                <input
-                                    type="number"
-                                    id="numero"
-                                    name="numero"
-                                    placeholder="Nº"
-                                >
-                            </div>
-                            <div class="input-box">
-                                <label for="bairro">Bairro</label>
-                                <input
-                                    type="text"
-                                    id="bairro"
-                                    name="bairro"
-                                    placeholder="Informe seu bairro"
-                                >
-                            </div>
-                            <div class="input-box">
-                                <label for="cidade">Cidade</label>
-                                <input
-                                    type="text"
-                                    id="cidade"
-                                    name="cidade"
-                                    placeholder="Informe sua cidade"
-                                >
-                            </div>
-                            <div class="input-box">
-                                <label for="estado">Estado</label>
-                                <input
-                                    type="text"
-                                    id="estado"
-                                    name="estado"
-                                    placeholder="Informe seu estado"
-                                >
-                            </div>
-                            <div class="input-box">
-                                <label for="cep">CEP</label>
-                                <input
-                                    type="text"
-                                    id="cep"
-                                    name="cep"
-                                    placeholder="Casa, Apto, Bloco"
-                                >
-                            </div>
-                        </div>
-                    </div>
-                    <div class="btn">
-                        <button type="submit" id="enviar">Cadastrar</button>
-                    </div>
-                </form>
+            <div class="branding">
+                <img src="https://via.placeholder.com/120x70" />
             </div>
+            <nav>
+                <ul class="menu">
+                    <li>
+                        <a href="#">Início</a>
+                    </li>
+                    <li>
+                        <a href="#">Produtos</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-        <script src="./js/jquery.mask.min.js"></script>
-        <script src="./js/jquery.validate.min.js"></script>
-        <script src="./js/messages_pt_BR.min.js"></script>
-        <script src="./js/main.js"></script>
-    </body>
+    </header>
+    <section>
+        <div class="container">
+            <h2>Produtos</h2>
+            <ul class="products">
+                <li class="product-item">
+                    <img src="https://via.placeholder.com/180x180" />
+                    <h4>Nome do produto</h4>
+                    <p>
+                        Descrição do produto, cor, tamanho, textura, etc.
+                    </p>
+                    <a href="#" class="product-button">
+                        Ver detalhes
+                    </a>
+                </li>
+                <li class="product-item">
+                    <img src="https://via.placeholder.com/180x180" />
+                    <h4>Nome do produto</h4>
+                    <p>
+                        Descrição do produto, cor, tamanho, textura, etc.
+                    </p>
+                    <a href="#" class="product-button">
+                        Ver detalhes
+                    </a>
+                </li>
+                <li class="product-item">
+                    <img src="https://via.placeholder.com/180x180" />
+                    <h4>Nome do produto</h4>
+                    <p>
+                        Descrição do produto, cor, tamanho, textura, etc.
+                    </p>
+                    <a href="#" class="product-button">
+                        Ver detalhes
+                    </a>
+                </li>
+                <li class="product-item">
+                    <img src="https://via.placeholder.com/180x180" />
+                    <h4>Nome do produto</h4>
+                    <p>
+                        Descrição do produto, cor, tamanho, textura, etc.
+                    </p>
+                    <a href="#" class="product-button">
+                        Ver detalhes
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </section>
+</body>
 </html>
