--- a/index.html
+++ b/index.html
@@ -8,72 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./build/main.css">
+    <link rel="stylesheet" href="./build/styles/main.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="branding">
-                <img src="https://via.placeholder.com/120x70" />
-            </div>
-            <nav>
-                <ul class="menu">
-                    <li>
-                        <a href="#">Início</a>
-                    </li>
-                    <li>
-                        <a href="#">Produtos</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <section>
-        <div class="container">
-            <h2>Produtos</h2>
-            <ul class="products">
-                <li class="product-item">
-                    <img src="https://via.placeholder.com/180x180" />
-                    <h4>Nome do produto</h4>
-                    <p>
-                        Descrição do produto, cor, tamanho, textura, etc.
-                    </p>
-                    <a href="#" class="product-button">
-                        Ver detalhes
-                    </a>
-                </li>
-                <li class="product-item">
-                    <img src="https://via.placeholder.com/180x180" />
-                    <h4>Nome do produto</h4>
-                    <p>
-                        Descrição do produto, cor, tamanho, textura, etc.
-                    </p>
-                    <a href="#" class="product-button">
-                        Ver detalhes
-                    </a>
-                </li>
-                <li class="product-item">
-                    <img src="https://via.placeholder.com/180x180" />
-                    <h4>Nome do produto</h4>
-                    <p>
-                        Descrição do produto, cor, tamanho, textura, etc.
-                    </p>
-                    <a href="#" class="product-button">
-                        Ver detalhes
-                    </a>
-                </li>
-                <li class="product-item">
-                    <img src="https://via.placeholder.com/180x180" />
-                    <h4>Nome do produto</h4>
-                    <p>
-                        Descrição do produto, cor, tamanho, textura, etc.
-                    </p>
-                    <a href="#" class="product-button">
-                        Ver detalhes
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </section>
+    <h1>Atividade sobre Gulp</h1>
 </body>
 </html>
